--- a/resources/css/styles/mainpage.css
+++ b/resources/css/styles/mainpage.css
@@ -204,3 +204,8 @@ nav {
       color: white;
       text-align: center;
   }
+
+  .carousel-cell .project-title a {
+      text-decoration: none;
+      color: white;
+  }
