--- a/resources/css/styles/mainpage.css
+++ b/resources/css/styles/mainpage.css
@@ -7,6 +7,7 @@
 body {
     background-color: #2C2828;
     font-family: 'Bebas Neue', cursive;
+    color: white;
 
 }
 
@@ -174,7 +175,7 @@ nav {
 
   }
   
-  .carousel-cell {
+.carousel-cell {
     width: 66%;
     height: 700px;
     margin-right: 20px;
@@ -183,10 +184,11 @@ nav {
     counter-increment: carousel-cell;
     border: 1px solid white;
     display: flex;
+    flex-direction: column;
   }
   
   /* cell number */
-  .carousel-cell:before {
+.carousel-cell:before {
     display: block;
     text-align: center;
     line-height: 200px;
@@ -194,14 +196,80 @@ nav {
     color: white;
   }
 
-  .carousel-cell .project-title {
+.carousel-cell .project-title {
       width: 100%;
-      height: 100%;
+      height: 10%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
   }
 
-  .carousel-cell .project-title h3 {
+.carousel-cell .project-title h3 {
       font-size: 40px;
       color: white;
-      text-align: center;
   }
+
+.carousel-cell .content {
+      width: 100%;
+      height: 100%;
+      display: flex;
+  }
+
+.carousel-cell .content .screenshot {
+    width: 50%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.carousel-cell .content .screenshot a {
+      width: 70%;
+      height: 90%;
+}
+
+.carousel-cell .content .screenshot img {
+      height: 100%;
+      width: 100%;
+}
+
+.carousel-cell .info {
+    width: 50%;
+    height: 100%;
+    margin-top: 20px;
+}
+
+.carousel-cell .about-section {
+    width: 100%;
+    height: 50%;
+}
+
+.carousel-cell .about-section h4 {
+    font-size: 36px;
+}
+
+.carousel-cell .about-section p {
+    font-size: 30px;
+    line-height: 1.5;
+    padding-right: 10px;
+}
+
+.carousel-cell .skills {
+    width: 100%;
+    height: 50%;
+}
+
+.carousel-cell .skills h4 {
+    font-size: 36px;
+}
+
+.carousel-cell .skills ul {
+    list-style: none;
+    line-height: 1.5;
+}
+
+.carousel-cell .skills li {
+    font-size: 30px;
+    
+}
 
